# todo-api

./: .env  Cargo.toml  curls.txt  docker-compose.yml
migrations/: 20230128162114_user.up.sql  20230130141444_task.up.sql
src/: main.rs
src/api/: auth.rs  error.rs  health.rs  mod.rs  task.rs  user.rs
src/model/: task.rs  user.rs
