[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
features = "0.10.0"
serde = { version = "1.0.152", features = ['derive'] }
serde_json = "1.0.91"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.2.0"
derive_more = "0.99.17"
actix-web-httpauth = "0.8.0"
